--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <script src="./jquery/jquery-3.4.1.min.js"></script>
-    <script src="./bootstrap/js/bootstrap.min.js"></script>
-    <script src="./isotope/isotope.min.js"></script>
+    <link rel="stylesheet" href="./libraries/bootstrap/css/bootstrap.min.css">
+    <script src="./libraries/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./libraries/jquery/jquery-3.4.1.min.js"></script>
+    <script src="./libraries/isotope/isotope.min.js"></script>
+    <link rel="stylesheet" href="./libraries/fontawesome/css/all.min.css">
     <link type="text/css" rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./fontawesome/css/all.min.css">
     <title>Project 3.0</title>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="75">
