--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./libraries/bootstrap/css/bootstrap.min.css">
-    <script src="./libraries/bootstrap/js/bootstrap.min.js"></script>
-    <script src="./libraries/jquery/jquery-3.4.1.min.js"></script>
-    <script src="./libraries/isotope/isotope.min.js"></script>
     <link rel="stylesheet" href="./libraries/fontawesome/css/all.min.css">
     <link type="text/css" rel="stylesheet" href="./style.css">
-    <title>Project 3.0</title>
+    <title>Apex Graphics</title>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="75">
 
@@ -763,6 +760,9 @@
         </div>
     </footer>
 
+    <script src="./libraries/jquery/jquery-3.4.1.min.js"></script>
+    <script src="./libraries/isotope/isotope.min.js"></script>
+    <script src="./libraries/bootstrap/js/bootstrap.min.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
